--- a/.env
+++ b/.env
@@ -39,4 +39,6 @@ RABBITMQ_PORT=5672
 # LDAP USER MAPPING
 LDAP_USER_GROUP=
 
+CSRF_SECRET="P*3NGEEaJV3yUGDJA9428EQRg!ad"
 NEXT_PUBLIC_SYSTEM_VERSION=latest
+TESTING=false
