--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
     "graphql": "^15.3.0",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.5.2",
     "nanoid": "^3.1.12",
     "next": "^10.0.0",
     "next-connect": "^0.9.0",
+    "next-csrf": "^0.1.1",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
     "passport-ldapauth": "^3.0.1",
@@ -118,6 +120,7 @@
     "jest": "26.6.3",
     "jest-fetch-mock": "^3.0.3",
     "msw": "^0.26.1",
+    "next-secure-headers": "^2.2.0",
     "node-sass": "^5.0.0",
     "prettier": "2.2.1",
     "sass-loader": "^11.0.1",
