--- a/apps/artemis-web/Dockerfile
+++ b/apps/artemis-web/Dockerfile
@@ -1,13 +1,13 @@
-FROM node:12.19.0-alpine
+FROM node:14.17.6-bullseye-slim
 
 WORKDIR /app
 
 COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile
 
-RUN apk add --no-cache bash
+RUN yarn install --frozen-lockfile && yarn cache clean
 
 COPY . .
+
 COPY ./apps/artemis-web/scripts/* ./
 
 RUN yarn run nx build artemis-web --prod
